tests/sksl/errors/ReservedNameDmat4.glsl
### Compilation failed:

error: 1: name 'dmat4' is reserved
int dmat4, dmat4x2, dmat4x3, dmat4x4;
    ^^^^^
error: 1: name 'dmat4x2' is reserved
int dmat4, dmat4x2, dmat4x3, dmat4x4;
           ^^^^^^^
error: 1: name 'dmat4x3' is reserved
int dmat4, dmat4x2, dmat4x3, dmat4x4;
                    ^^^^^^^
error: 1: name 'dmat4x4' is reserved
int dmat4, dmat4x2, dmat4x3, dmat4x4;
                             ^^^^^^^
4 errors
